--- a/app/globals.css
+++ b/app/globals.css
@@ -2,28 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
+.centered-items{
+  @apply flex flex-col justify-center items-center
+}
 
 main{
-  @apply min-h-[calc(100vh-200px)] flex flex-col justify-center items-center relative
+  @apply min-h-[calc(100vh-200px)] relative centered-items
 }
-
 
 footer{
-  @apply flex flex-col justify-center items-center h-[100px] absolute bg-red-500 w-full
-}
-
-.primary{
-  @apply text-white border-solid  border-white font-bold py-2 px-4 rounded border bg-green-600 w-[100px] flex flex-col items-center justify-center
-}
-
-.secondary{
-  @apply bg-red-500 text-black font-bold py-2 px-4 rounded border w-[100px] flex flex-col items-center justify-center
-}
-
-.ghost{
-  @apply text-sky-500 border-solid  border-sky-500 font-bold py-2 px-4 rounded border w-[100px] flex flex-col items-center justify-center
+  @apply centered-items h-[100px] absolute bg-red-500 w-full
 }
 
 .day{
   @apply h-[100px] w-[100px] border-solid bg-red-100 border-black
 }
+
+.button-common {
+  @apply font-bold py-2 px-4 rounded w-[100px] centered-items
+}
+.primary {
+  @apply text-white border-solid border-white bg-green-600 button-common;
+}
+
+.secondary {
+  @apply bg-red-500 text-black button-common;
+}
+
+.ghost {
+  @apply text-sky-500 border-solid border-sky-500 button-common;
+}
+
