update some css

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,27 +6,35 @@
   @apply flex flex-col justify-center items-center
 }
 
+.hover{
+  @apply  hover:bg-gray-500 hover:text-white transition ease-in-out;
+}
+
 main{
   @apply min-h-[calc(100vh-200px)] relative centered-items
 }
 
+header{
+  @apply flex justify-between items-center h-[100px] p-5 bg-gray-200
+}
+
 footer{
-  @apply centered-items h-[100px] absolute bg-red-500 w-full
+  @apply centered-items h-[100px] absolute w-full
 }
 
 .day{
-  @apply h-[100px] w-[100px] border-solid bg-red-100 border-black
+  @apply h-[100px] w-[100px] border-solid bg-gray-300 border-black hover centered-items;
 }
 
 .button-common {
   @apply font-bold py-2 px-4 rounded w-[100px] centered-items
 }
 .primary {
-  @apply text-white border-solid border-white bg-green-600 button-common;
+  @apply text-white border-solid border-white bg-sky-600 button-common;
 }
 
 .secondary {
-  @apply bg-red-500 text-black button-common;
+  @apply bg-gray-300 text-black button-common;
 }
 
 .ghost {
